// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shadow.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
var o = {};
(o.p: string);
(o: $Shape<{p:string}>);

=====================================output=====================================
var o = {};
(o.p: string);
(o: $Shape<{ p: string }>);

================================================================================
`;

exports[`test.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type Foo = {
  field: number,
}

var x: {field?: number} = {};
var y: $Shape<Foo> = x;
(y.field: number)

=====================================output=====================================
type Foo = {
  field: number,
};

var x: { field?: number } = {};
var y: $Shape<Foo> = x;
(y.field: number);

================================================================================
`;
